<resources>
    <string name="app_name">Seccion 4</string>
    <string name="snackButton">Lanza Snackbar</string>
    <string name="button1">Ciclo de vida</string>
    <string name="lifeCycleButton">Ciclo de vida</string>
    <string name="clickButton">Click</string>
    <string name="extensionsButton">Extensiones</string>
    <string name="picassoButton">Picasso</string>
    <string name="intentsButton">Intents</string>
    <string name="permissionsButton">Permissions</string>
    <string name="sharedPreferencesButton">Shared Preferences</string>
    <string name="extensionsFunctionsButton">Extensions Functions</string>
    <string name="button_click_multi_3">Multi 3</string>
    <string name="button_click_multi_2">Multi 2</string>
    <string name="button_click_xml">XML</string>
    <string name="button_click_inline">InLine</string>
    <string name="button_click_multi_1">Multi 1</string>
    <string name="button_by_id">By Id</string>
    <string name="button_by_kat">By Kat</string>
    <string name="loadImageButton">Load image</string>
    <string name="listViewButton">ListView</string>
    <string name="button_intent_extras">Intent Extras</string>
    <string name="button_intent_flags">Intent Flags</string>
    <string name="button_intent_objects">Intent Objects</string>
    <string name="button_back">Go back</string>
</resources>
